fixed travis.yml error

--- a/travis.yml
+++ b/travis.yml
@@ -1,6 +1,6 @@
 language: go
 install:
-- got get -v github.com/brichards99/brichards.net
+- go get -v github.com/brichards99/brichards.net
 script:
 - hugo version
 - make build
