--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "http://www.brichards.net/"
 languageCode = "en-us"
 title = "Brian Richards and his stuff"
-theme    = "sp-minimal"
+theme    = "hugo-sp-minimal"
 Paginate = 5
 disqusShortname = "xxxx"
 [params]
