--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "themes/ananke"]
 	path = themes/ananke
 	url = https://github.com/budparr/gohugo-theme-ananke.git
+
+[submodule "themes/purehugo"]
+	path = themes/purehugo
+	url = https://github.com/dplesca/purehugo
+
+
