back to purehugo

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "http://www.brichards.net/"
 languageCode = "en-us"
 title = "Brian Richards and his stuff"
-theme    = "ananke"
+theme    = "purehugo"
 Paginate = 5
 disqusShortname = "xxxx"
 [params]
