--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 	url = https://github.com/dplesca/purehugo
 
 
+[submodule "dream-plus"]
+	path = dream-plus
+	url = https://github.com/UtkarshVerma/hugo-dream-plus
