--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 [submodule "dream-plus"]
 	path = dream-plus
 	url = https://github.com/UtkarshVerma/hugo-dream-plus
+
+[submodule "hugo-theme-projecthub"]
+	path = dream-plus
+	url = https://github.com/vjeantet/hugo-theme-projecthub
