--- a/.gitmodules
+++ b/.gitmodules
@@ -7,10 +7,10 @@
 	url = https://github.com/dplesca/purehugo
 
 
-[submodule "dream-plus"]
+[submodule "themes/dream-plus"]
 	path = dream-plus
 	url = https://github.com/UtkarshVerma/hugo-dream-plus
 
-[submodule "hugo-theme-projecthub"]
+[submodule "themes/hugo-theme-projecthub"]
 	path = dream-plus
 	url = https://github.com/vjeantet/hugo-theme-projecthub
