--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "http://www.brichards.net/"
 languageCode = "en-us"
 title = "Brian Richards and his stuff"
-theme    = "dream"
+theme    = "hugo-theme-robust"
 
 [params]
     author = "Brian Richards"
@@ -12,7 +12,10 @@ theme    = "dream"
     contentType = "post"
     paginate = 10 
 
-
+  # Fonts settings.
+  googlefonts = "https://fonts.googleapis.com/css?family=Lobster|Lato:400,700" # Optional, Include google fonts.
+  fontfamily = "Lato,YuGothic,'Hiragino Kaku Gothic Pro',Meiryo,sans-serif" # Optional, Override body font family.
+  logofontfamily = "Lobster, cursive" # Optional, Override logo font.
 
 
     #rootlink = "/"
