--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,7 @@
 [submodule "themes/dream-plus"]
 	path = themes/dream-plus
 	url = https://github.com/UtkarshVerma/hugo-dream-plus
+
+[submodule "themes/hugo_theme_robust"]
+	path = themes/hugo_theme_robust
+	url = https://github.com/dim0627/hugo_theme_robust.git
