--- a/config.toml
+++ b/config.toml
@@ -12,6 +12,15 @@ theme    = "hugo-theme-robust"
     contentType = "post"
     paginate = 10 
 
+[params.author]
+  thumbnail = "bulb514.jpg"
+  name = "Brian Richards"
+  description = "Brian has nearly twenty years of experience as a member of operations teams at Penn State University and Carnegie Mellon University in roles such as developer, system administrator, SAN administrator, and IT manager. Brian is currently contributing to a team supporting ServiceNow, a cloud-based IT Service Management platform, for CMU. At the same time he has been teaching courses in technology at several universities both on ground and online.
+
+Brian has earned two Master’s degrees: one in instructional technology and one in information technology security and assurance. He is a serial certifier, having earned many certifications from Microsoft, VMWare, CompTIA, and ITIL over the years, and all those test questions have also given him strong opinions about what does and doesn’t work in IT.
+"
+
+
   # Fonts settings.
   googlefonts = "https://fonts.googleapis.com/css?family=Lobster|Lato:400,700" # Optional, Include google fonts.
   fontfamily = "Lato,YuGothic,'Hiragino Kaku Gothic Pro',Meiryo,sans-serif" # Optional, Override body font family.
