--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "http://www.brichards.net/"
 languageCode = "en-us"
 title = "Brian Richards and his stuff"
-theme    = "hugo-theme-robust"
+theme    = "dream"
 
 disqusShortname = "XYW"
 
