changing to sp-minimal

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/crab"]
 	path = themes/crab
 	url = https://github.com/thomasheller/crab
+[submodule "themes/sp-minimal"]
+	path = themes/sp-minimal
+	url = https://github.com/eueung/hugo-sp-minimal.git
