switching to projecthub

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/sp-minimal"]
 	path = themes/sp-minimal
 	url = https://github.com/eueung/hugo-sp-minimal.git
+[submodule "themes/projecthub"]
+	path = themes/projecthub
+	url = https://github.com/vjeantet/hugo-theme-projecthub
