--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: go
 install:
-- go get -v github.com/gohugoio/hugo
+- go get -v https://github.com/gohugoio/hugo
 - pip install --user awscli
 script:
 - hugo version
