--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: go
 go:
   - 1.7.1
 install:
-- go get -v https://github.com/gohugoio/hugo
+- go get -v github.com/gohugoio/hugo
 - pip install --user awscli
 script:
 - hugo version
