--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ deploy:
   target_branch: master # GitHub pages branch to deploy to (in other cases it can be gh-pages)
   provider: pages
   skip_cleanup: true
-  github_token: 88435e183b270be29089b05edf0c1a3600cfcb67
+  # github_token: 
   email: brichards99@gmail.com
   name: "brichards99"
   on:
