--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: https://www.brichards.net/
 languageCode: en-us
 defaultContentLanguage: en
-title: Dude
+title: Brian Richards, writer
 theme: cupper
 enableGitInfo: true
 
