--- a/config.toml
+++ b/config.toml
@@ -1,12 +1,11 @@
-
 baseurl = https://www.brichards.net/
 title = "Brian Richards, writer"
+languageCode = "en-us"
+theme = "blackburn"
 author = "Brian Richards"
-# Shown in the side menu
-copyright = "&copy; all the times. All rights reserved."
+copyright = "&copy; always. All rights reserved."
 canonifyurls = true
 paginate = 10
-theme = "blackburn"
 
 [indexes]
   tag = "tags"
@@ -14,20 +13,13 @@ theme = "blackburn"
 
 [params]
   # Shown in the home page
-  subtitle = "Brian Richards, writer"
-  brand = "blackburn"
+  subtitle = "A Hugo Theme"
+  brand = "Blackburn"
+  googleAnalytics = "Your Google Analytics tracking ID"
+  disqus = "Your Disqus shortname"
   # CSS name for highlight.js
   highlightjs = "androidstudio"
-  highlightjs_extra_languages = ["yaml"]
   dateFormat = "02 Jan 2006, 15:04"
-  # Include any custom CSS and/or JS files
-  # (relative to /static folder)
-  #custom_css = ["css/my.css"]
-  #custom_js = ["js/my.js"]
-
-  [params.piwikAnalytics]
-    siteid = 2
-    piwikroot = "//analytics.example.com/"
 
 [menu]
   # Shown in the side menu.
@@ -49,51 +41,18 @@ theme = "blackburn"
     weight = 3
     identifier = "about"
     url = "/about/"
+  [[menu.main]]
+    name = "Contact"
+    pre = "<i class='fa fa-phone fa-fw'></i>"
+    weight = 4
+    url = "/contact/"
 
 [social]
-  # Link your social networking accounts to the side menu
+  # Link your social networking accouns to the side menu
   # by entering your username or ID.
-
-  # SNS microblogging
-  twitter = "@brichards99"
-  gnusocial = "*" # Specify href (e.g. https://quitter.se/yourusername)
+  twitter = "*"
   facebook = "*"
-  googleplus = "*"
-  weibo = "*"
-  tumblr = "*"
-
-  # SNS photo/video sharing
   instagram = "*"
-  flickr = "*"
-  photo500px = "*"
-  pinterest = "*"
-  youtube = "*"
-  vimeo = "*"
-  vine = "*"
-  slideshare = "*"
-
-  # SNS career oriented
-  linkedin = "*"
-  xing = "*"
-
-  # SNS news
-  reddit = "*"
-  hackernews = "*"
-
-  # Techie
   github = "yoshiharuyamashita"
-  gitlab = "*"
-  bitbucket = "*"
   stackoverflow = "*"
-  serverfault = "*"
-
-  # Gaming
-  steam = "*"
-  mobygames = "*"
-
-  # Music
-  lastfm = "*"
-  discogs = "*"
-
-  # Other
-  keybase = "*"
+  linkedin = "*"
