--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = https://www.brichards.net/
+baseurl = "https://www.brichards.net/"
 title = "Brian Richards, writer"
 languageCode = "en-us"
 theme = "blackburn"
@@ -12,10 +12,27 @@ paginate = 10
   topic = "topics"
 
 [menu]
-[[menu.main]]
-  name = "About"
-  pre = "<i class='fa fa-user fa-fw'></i>"
-  weight = 2
-  identifier = "about"
-  url = "/about/"
-
+  # Shown in the side menu.
+  [[menu.main]]
+    name = "Home"
+    pre = "<i class='fa fa-home fa-fw'></i>"
+    weight = 1
+    identifier = "home"
+    url = "/"
+  [[menu.main]]
+    name = "Posts"
+    pre = "<i class='fa fa-list fa-fw'></i>"
+    weight = 2
+    identifier = "post"
+    url = "/post/"
+  [[menu.main]]
+    name = "About"
+    pre = "<i class='fa fa-user fa-fw'></i>"
+    weight = 3
+    identifier = "about"
+    url = "/about/"
+  [[menu.main]]
+    name = "Contact"
+    pre = "<i class='fa fa-phone fa-fw'></i>"
+    weight = 4
+    url = "/contact/"
